--- a/pediraumento.html
+++ b/pediraumento.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     
-    <img src="./image/mendigo-pica-pau.webp" alt="">
+    <img src="./mendigo-pica-pau.webp" alt="">
     <h1 style="color: rgb(255, 190, 26); font-size: 64px; font-family:Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif; letter-spacing: 0.5px; font-weight: 400; translate: 0 -50px; text-shadow: 0 0 8px black;">Olá, chefe</h1>
     <p style="color: white; font-size: 32px; font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif; translate: 0 -55px; font-weight: 700; text-shadow: 0 0 6px black; text-align: center;">O senhor poderia, por gentileza,<br> me dar um aumento?</p>
     <div class="botoes">
@@ -17,7 +17,7 @@
 
     </div>
 
-    <video src="./image/Rain-Background.mp4" autoplay loop></video>
+    <video src="./Rain-Background.mp4" autoplay loop></video>
 
 </body>
 </html>
